css/responsive.less
@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) {
   html,
   body {
      max-width: 100%;
      overflow-x: hidden;
   }

   .intro {
      width: 90vw;
      font-size: 1rem;
   }

   .header {
      display: flex;
      flex-direction: column;
      align-items: center;

      color: var(--background);
      background-image: var(--header-img);
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;

      height: 50vh;

      h1 {
         margin: 0;
         align-self: flex-start;
         color: var(--background);
         transition: all 100ms ease;
         font-size: 1.2rem;

         cursor: pointer;
      }

      h2 {
         font-size: 2rem;
         line-height: 3rem;
      }
      a {
         display: none;
      }
   }

   .literary-piece {
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;
      padding: 5rem 0;
   }

   .content {
      display: flex;
      flex-direction: column;
      transition: max-height 0.1s ease;
      width: 90%;
      padding: 2rem 2rem;

      h1 {
         margin-bottom: 2rem;
      }
      p {
         font-size: 1rem;
         line-height: 2rem;
      }

      .tab-contents {
         display: flex;
         flex-direction: column;
         justify-content: start;
      }

      .label {
         display: flex;
         flex-direction: column;
         margin-bottom: 2rem;
         align-items: center;

         .number {
            background-color: var(--background);
            width: 4rem;
            height: 4rem;
            font-size: 2.5rem;
            display: flex;
            justify-content: center;
            align-items: center;
            margin-right: 20px;
         }

         .content-tabs {
            margin: 0;
            padding: 0;
            margin-left: auto;
            line-height: 2rem;
            button {
               align-self: center;
               margin: 0;
               padding: 0;
               border: none;
               margin-left: 20px;
               background-color: transparent;
               font-family: "PT Sans";
               transition: all 0.1s ease;
               font-size: 1.2rem;
            }
         }

         h1 {
            font-size: 3rem;
            margin: 0;
            color: black;
         }
      }

      .author {
         display: flex;
         flex-direction: column;

         img {
            display: block;
            margin: auto;
            margin-bottom: 20px;
         }
      }

      .summary,
      .role,
      .why {
         img {
            width: 100%;
            object-fit: cover;
         }
      }

      .background-context,
      .why,
      .role {
         img {
            margin-bottom: 3rem;
         }
      }

      .background-context {
         display: flex;
         flex-direction: column;

         img {
            width: 30vh;
         }
      }
   }

   .footer {
      background-color: #111013;
      margin: 0;
      padding: 2rem 0;
      color: #faf8f5;

      * {
         margin: 0;
         padding: 0;
      }

      h1 {
         margin-bottom: 10px;
      }

      ul {
         padding-left: 1rem;
         list-style-type: none;
         overflow: hidden;
      }

      li {
         margin-top: 10px;
      }

      .footer-content {
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: 90%;
      }

      .credits {
         display: flex;
         display: flex;
         flex-direction: column;
      }

      .credit {
         width: 100%;
      }

      .members-list {
         display: flex;
         margin-bottom: 20px;
      }
   }
}

@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
   .intro {
      width: 80%;
      font-size: 1rem;
   }

   .author,
   .background-context {
      display: flex;
      flex-direction: column;

      img {
         justify-self: center;
      }
   }

   .summary,
   .role,
   .why {
      img {
         width: 100%;
         object-fit: cover;
      }
   }
}

